# Algorithms-and-Data-Structures

./: .gitignore  README.md
01_Rectangle/: CMakeLists.txt  README.md  run.sh
01_Rectangle/src/: CMakeLists.txt  Rectangle.cpp
01_Rectangle/tests/: CMakeLists.txt  Rectangle.tests.cpp
02_Factory/: CMakeLists.txt  README.md
02_Factory/src/: CMakeLists.txt  FunctionFactory.cpp
02_Factory/tests/: CMakeLists.txt  IFunction.tests.cpp
03_SetAndCone/: CMakeLists.txt  README.md
03_SetAndCone/src/: CMakeLists.txt
03_SetAndCone/tests/: CMakeLists.txt  Cone.tests.cpp  Set.tests.cpp
04_LinkedList/: CMakeLists.txt
04_LinkedList/src/: CMakeLists.txt
04_LinkedList/tests/: CMakeLists.txt  LinkedList.tests.cpp
05_BinaryTree/: CMakeLists.txt  README.md
05_BinaryTree/src/: CMakeLists.txt
05_BinaryTree/tests/: BinaryTree.tests.cpp  CMakeLists.txt
06_SortAlgorithms/: CMakeLists.txt  README.md
06_SortAlgorithms/src/: CMakeLists.txt  HeapSort.cpp  LSDSort.cpp  MergeSort.cpp  QuickSort.cpp  ShellSort.cpp
06_SortAlgorithms/tests/: CMakeLists.txt  HeapSort.tests.cpp  LSDSort.tests.cpp  MergeSort.tests.cpp  ParametersList.h  QuickSort.tests.cpp  ShellSort.tests.cpp  Sortings.tests.cpp  TestFunctions.h  TimeIt.h
07_SearchAlgorithms/: CMakeLists.txt  README.md
07_SearchAlgorithms/src/: CMakeLists.txt
07_SearchAlgorithms/tests/: CMakeLists.txt  ParametersList.h  Search.tests.cpp  TestsFunctions.h
08_OptimalBinaryTree/: CMakeLists.txt  README.md
08_OptimalBinaryTree/src/: CMakeLists.txt
08_OptimalBinaryTree/tests/: CMakeLists.txt  OBST.tests.cpp
09_AVLBinaryTree/: CMakeLists.txt  README.md  run.sh
09_AVLBinaryTree/src/: CMakeLists.txt
09_AVLBinaryTree/tests/: AVLBinaryTree.tests.cpp  CMakeLists.txt
10_HashTable/: CMakeLists.txt  README.md  fio.py
10_HashTable/src/: CMakeLists.txt
10_HashTable/tests/: CMakeLists.txt  HashTable.tests.cpp
11_SubstringSearchAlgorithms/: CMakeLists.txt
11_SubstringSearchAlgorithms/tests/: SubStringSearch.tests.cpp
11_SubsttringSearchAlgorithms/: README.md
11_SubsttringSearchAlgorithms/src/: CMakeLists.txt  SubStringSearch.cpp
(+26 files in other folders)
